Cherry-pick r258658. rdar://problem/60756680

REGRESSION(r254389): Cordova throws an exception because it expects a hyphen inside navigator.locale
    https://bugs.webkit.org/show_bug.cgi?id=208969
    <rdar://problem/59845517>

    Reviewed by Darin Adler.

    We want to thwart fingerprinting by minimizing the list of locales, but we also don't want to break existing apps.
    We can achieve both by a linked-on-or-after check.

    * wtf/cocoa/LanguageCocoa.mm:
    (WTF::canMinimizeLanguages):

    Canonical link: https://commits.webkit.org/222171@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258658 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.450@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@258853 268f45cc-cd09-0410-ab3c-d52691b4dbfc