Source/WTF/wtf/cocoa/LanguageCocoa.mm
@@ -27,13 +27,24 @@
 #import <wtf/Language.h>
 
 #import <wtf/NeverDestroyed.h>
+#import <wtf/cocoa/RuntimeApplicationChecksCocoa.h>
 #import <wtf/spi/cocoa/NSLocaleSPI.h>
 
 namespace WTF {
 
 bool canMinimizeLanguages()
 {
-    static bool result = [NSLocale respondsToSelector:@selector(minimizedLanguagesFromLanguages:)];
+    static const bool result = []() -> bool {
+#if PLATFORM(MAC)
+        if (applicationSDKVersion() < DYLD_MACOSX_VERSION_10_15_4)
+            return false;
+#endif
+#if PLATFORM(IOS)
+        if (applicationSDKVersion() < DYLD_IOS_VERSION_13_4)
+            return false;
+#endif
+        return [NSLocale respondsToSelector:@selector(minimizedLanguagesFromLanguages:)];
+    }();
     return result;
 }
 
